Title changes & year correction.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg+xml" href="/hot-beverage.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coffee Shop</title>
+  <title>Bean Coffee Shop</title>
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="src/style.css">
@@ -160,7 +160,7 @@
     </div>
 
     <div class="credit">
-      <p>By <a href="#">leonardowijayanto</a> | &#xA9; 2024</p>
+      <p>By <a href="#">leonardowijayanto</a> | &#xA9; 2025</p>
     </div>
   </footer>
   <!-- Footer End -->
