Adding Product, Search & Cart activation, resolve null href bug.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <ul class="cascade">
         <li><a href="#hero">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#gallery">Menu</a></li>
+        <li><a href="#service">Menu</a></li>
+        <li><a href="#product">Product</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -34,6 +35,40 @@
       <a href="#" id="magnify-search"><i class='bx bx-search-alt'></i></a>
       <a href="#" id="shopping-cart"><i class='bx bx-cart-alt'></i></a>
       <a href="#" id="hamburger-menu"><i class='bx bx-menu'></i></a>
+    </div>
+
+    <!-- Search Column -->
+    <div class="search-column">
+      <input type="search" name="" id="search-form" placeholder="Search Here...">
+      <label for="search-form"><i class='bx bx-search-alt-2'></i></label>
+    </div>
+
+    <!-- Shopping Cart -->
+    <div class="cart">
+      <div class="shopping">
+        <img src="assets/images/product/pouchmakers-in-WAtMtTelG_0-unsplash.png" alt="product-item">
+        <div class="stuff">
+          <h3>Special Blend</h3>
+          <div class="price">IDR</div>
+        </div>
+        <i id="remove" class='bx bxs-trash'></i>
+      </div>
+      <div class="shopping">
+        <img src="assets/images/product/pouchmakers-in-WAtMtTelG_0-unsplash.png" alt="product-item">
+        <div class="stuff">
+          <h3>Special Blend</h3>
+          <div class="price">IDR</div>
+        </div>
+        <i id="remove" class='bx bxs-trash'></i>
+      </div>
+      <div class="shopping">
+        <img src="assets/images/product/pouchmakers-in-WAtMtTelG_0-unsplash.png" alt="product-item">
+        <div class="stuff">
+          <h3>Special Blend</h3>
+          <div class="price">IDR</div>
+        </div>
+        <i class='bx bxs-trash'></i>
+      </div>
     </div>
   </header>
   <!-- Header End -->
@@ -75,8 +110,8 @@
   </section>
   <!-- About Section End -->
 
-  <!-- Gallery Section Begin -->
-  <section id="gallery" class="gallery">
+  <!-- Service Section Begin -->
+  <section id="service" class="service">
     <h2>Our <span>Menu</span></h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
       Corporis suscipit nemo perferendis exercitationem,
@@ -88,36 +123,109 @@
       <div class="card">
         <img src="assets/images/menu/nathan-dumlao-2tlPshmlbjg-unsplash.png" alt="Espresso">
         <h3 class="title">&#x223C;Espresso&#x223D;</h3>
-        <p class="price"><span>&centerdot;</span> IDR 25K</p>
+        <p class="price">IDR 25K</p>
       </div>
       <div class="card">
-        <img src="assets/images/menu/nathan-dumlao-dAYJfrtVjh0-unsplash.png" alt="Espresso">
+        <img src="assets/images/menu/nathan-dumlao-dAYJfrtVjh0-unsplash.png" alt="Americano">
         <h3 class="title">&#x223C;Americano&#x223D;</h3>
-        <p class="price"><span>&centerdot;</span> IDR 25K</p>
+        <p class="price">IDR 25K</p>
       </div>
       <div class="card">
-        <img src="assets/images/menu/christina-dibernardo-MXXTl3Cj2Og-unsplash.png" alt="Espresso">
+        <img src="assets/images/menu/christina-dibernardo-MXXTl3Cj2Og-unsplash.png" alt="Long Black">
         <h3 class="title">&#x223C;Long Black&#x223D;</h3>
-        <p class="price"><span>&centerdot;</span> IDR 25K</p>
+        <p class="price">IDR 25K</p>
       </div>
       <div class="card">
-        <img src="assets/images/menu/amanda-lim-8FINAC001Nk-unsplash.png" alt="Espresso">
+        <img src="assets/images/menu/amanda-lim-8FINAC001Nk-unsplash.png" alt="Cappuccino">
         <h3 class="title">&#x223C;Cappuccino&#x223D;</h3>
-        <p class="price"><span>&centerdot;</span> IDR 25K</p>
+        <p class="price">IDR 25K</p>
       </div>
       <div class="card">
-        <img src="assets/images/menu/pariwat-pannium-twh7hIjuzfg-unsplash.png" alt="Espresso">
+        <img src="assets/images/menu/pariwat-pannium-twh7hIjuzfg-unsplash.png" alt="Mochaccino">
         <h3 class="title">&#x223C;Mochaccino&#x223D;</h3>
-        <p class="price"><span>&centerdot;</span> IDR 25K</p>
+        <p class="price">IDR 25K</p>
       </div>
     </div>
   </section>
-  <!-- Gallery Section End -->
+  <!-- Service Section End -->
+
+  <!-- Product Section Begin -->
+  <section id="product" class="product">
+    <h2>Our <span>Product</span></h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Quidem ipsam deleniti obcaecati voluptatem veniam perspiciatis animi iste molestiae ducimus,
+      quasi beatae ut accusamus? Illum, ratione cumque voluptas ut culpa officiis.
+    </p>
+
+    <div class="item">
+      <div class="card">
+        <div class="icons">
+          <a href="#"><i class='bx bx-cart-download'></i></a>
+          <a href="#"><i class='bx bx-dots-vertical'></i></a>
+        </div>
+        <div class="detail">
+          <img src="assets/images/product/pouchmakers-in-WAtMtTelG_0-unsplash.png" alt="Arabica">
+        </div>
+        <div class="description">
+          <h3>Arabica Coffee</h3>
+          <div class="rating">
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star'></i>
+            <i class='bx bx-star'></i>
+          </div>
+          <div class="price">IDR 175K <span>200K</span></div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="icons">
+          <a href="#"><i class='bx bx-cart-download'></i></a>
+          <a href="#"><i class='bx bx-dots-vertical'></i></a>
+        </div>
+        <div class="detail">
+          <img src="assets/images/product/pouchmakers-in-WAtMtTelG_0-unsplash.png" alt="Robusta">
+        </div>
+        <div class="description">
+          <h3>Robusta Coffee</h3>
+          <div class="rating">
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+          </div>
+          <div class="price">IDR 175K <span>200K</span></div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="icons">
+          <a href="#"><i class='bx bx-cart-download'></i></a>
+          <a href="#"><i class='bx bx-dots-vertical'></i></a>
+        </div>
+        <div class="detail">
+          <img src="assets/images/product/pouchmakers-in-WAtMtTelG_0-unsplash.png" alt="Special Mix">
+        </div>
+        <div class="description">
+          <h3>Special Blend</h3>
+          <div class="rating">
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star'></i>
+            <i class='bx bxs-star-half'></i>
+            <i class='bx bx-star'></i>
+          </div>
+          <div class="price">IDR 175K <span>200K</span></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Product Section End -->
 
   <!-- Contact Section Begin -->
   <section id="contact" class="contact">
-    <h2>Keep in <span>Contact</span></h2>
-    <h3>so <span>stay in</span> touch</h3>
+    <h2>Our <span>Contact</span></h2>
+    <h3>to <span>keep in</span> touch</h3>
 
     <div class="area">
       <iframe
